<resources>
    <string name="app_name">ConstraintLayout sample</string>
    <string name="tv_title">Enter the requlred information</string>
    <string name="tv_name">Name</string>
    <string name="tv_mail">Email address</string>
    <string name="tv_comment">Question</string>
    <string name="bt_confirm">Confirmation</string>
    <string name="bt_send">Submit</string>
    <string name="bt_clear">Clear</string>
</resources>